fixed responsiveness on mobile and temp removed blog

--- a/style.css
+++ b/style.css
@@ -18,10 +18,6 @@ img {
 	margin-left: 1em;
 }
 
-#footer {
-	text-align: right;
-}
-
 body {
 	margin: auto;
 	max-width: 1024px;
@@ -63,12 +59,21 @@ a:hover {
 }
   
 /* Smartphones (portrait and landscape) ----------- */
-@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
+@media only screen and (max-device-width : 480px) {
 	#container {
-		min-width: 300px;
+		/* min-width: 300px; */
 		max-width: 700px;
-		width: 100%;
+		width: calc(100% - 40px);
 		padding: 20px;
 		font-size: 13px;
+		margin: 0;
 	} 
+
+	#container p { margin-left: 0.2em; }
+	ul { margin-left: -1em; }
+	li { margin-left: -0.4em; }
+
+	img {
+		min-width: calc(100% - 10px);
+	}
 }
